# tinuous

./: .appveyor.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  MANIFEST.in  README.rst  codecov.yml  download-logs.py  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py  tinuous  tox.ini
.circleci/: config.yml
.github/workflows/: codespell.yml  inception-test.yml  release.yml  test.yml
src/tinuous/: __init__.py  __main__.py  _version.py  appveyor.py  base.py  circleci.py  config.py  github.py  state.py  travis.py  util.py
test/: test_base.py  test_config.py  test_github.py  test_packages_integration.py  test_state.py  test_util.py
test/data/: test_packages.yaml
