[metadata]
name = tinuous
description = Download build logs from GitHub Actions, Travis, and Appveyor
long_description = file:README.rst
long_description_content_type = text/x-rst
author = Center for Open Neuroscience
author_email = debian@onerussian.com
maintainer = John T. Wodder II
maintainer_email = tinuous@varonathe.org
license = MIT
license_files = LICENSE
url = https://github.com/con/tinuous

keywords =
    Appveyor
    GitHub Actions
    Travis CI
    continuous integration

classifiers =
    Development Status :: 4 - Beta
    #Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Topic :: System :: Filesystems

project_urls =
    Source Code = https://github.com/con/tinuous
    Bug Tracker = https://github.com/con/tinuous/issues

[options]
packages = find:
package_dir =
    =src
python_requires = ~=3.8
install_requires =
    click >= 7.0
    click-loglevel ~= 0.2
    in_place ~= 0.4
    pydantic ~= 1.7
    PyGithub ~= 1.55
    python-dateutil ~= 2.7
    python-dotenv ~= 0.11
    PyYAML ~= 5.0
    requests ~= 2.20

[options.extras_require]
all =
    %(datalad)s
datalad =
    datalad ~= 0.14

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    tinuous = tinuous.__main__:main

[versioneer]
VCS = git
style = pep440
versionfile_source = src/tinuous/_version.py
versionfile_build = tinuous/_version.py
tag_prefix =
parentdir_prefix =

[mypy]
ignore_missing_imports = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
no_implicit_optional = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
local_partial_types = True
no_implicit_reexport = True
strict_equality = True
show_error_codes = True
show_traceback = True
pretty = True
plugins = pydantic.mypy
exclude = _version\.py

[mypy-tinuous._version]
follow_imports = skip
